# atlas_config_example

./: CMakeLists.txt  README.md  package.xml  replay.sh
config/: core.yaml  loc_boxes.yaml  loc_helmets.yaml  loc_robots.yaml  loc_workstations.yaml  pos.yaml  slots.yaml  tags.yaml
launch/: config.launch  core.launch  fast_node.launch  localizer.launch  node_bridge.launch  visualizer.launch
visualization/: innolab.dae  innolab.rviz  innolab.urdf.xacro  materials.xacro
